--- a/pms_B.html
+++ b/pms_B.html
@@ -219,6 +219,7 @@ var webcamStop = {
   }
 };
 
+timeline.push(soundCheck);
 timeline.push(webcamStop)
 
 var afsluitendeTrial = {
@@ -226,7 +227,7 @@ var afsluitendeTrial = {
   stimulus: 'Dit is het einde van de taak. Druk op een toets om de data op te slaan en de taak af te sluiten.' +
   '<br>Dit was het einde van het onderzoek van vandaag!'+
   '<br><br>Als dit uw laatste sessie was willen we u van harte bedanken voor uw deelname.'+
-  '<br>Indien u graag op de hoogte blijft van uw resultaten of wat kwijt wilt over het onderzoek mag u altijd contact met ons opnemen (Liese.Opsomer@UGent.be).'+
+  '<br>Indien u graag op de hoogte blijft van uw resultaten of wat kwijt wilt over het onderzoek mag u altijd contact met ons opnemen (cyclusonderzoek_ugent@outlook.com).'+
   '<br><br>Ghent Experimental Psychiatry Lab Universiteit Gent',
   choices: jsPsych.ALL_KEYS,
 }
