text edits :broom:
tekstuele update

--- a/pms_A.html
+++ b/pms_A.html
@@ -97,19 +97,19 @@ var instructions = {
     '<br><br>Een afbeelding is POSITIEF als het als goed wordt beschouwd, terwijl de afbeelding NEGATIEF is als het als slecht wordt beschouwd.'+
     '<br>Geef de valentie van elke afbeelding aan op een schaal van ZEER NEGATIEF tot ZEER POSITIEF, waarbij het middelpunt NEUTRAAL vertegenwoordigt. ',
     '<b> Voorbeelden:</b><br><br>'+
-    'Als u bijvoorbeeld het gevoel hebt dat &quot;atoombom&quot; een zeer negatieve betekenis heeft, dan antwoord u ver links op de schaal.'+
+    'Als u bijvoorbeeld het gevoel hebt dat &quot;atoombom&quot; een zeer negatieve betekenis heeft, dan antwoordt u ver links op de schaal.'+
     '<br>Als u bijvoorbeeld het gevoel hebt dat &quot;fantastisch&quot; een zeer positieve betekenis heeft, dan antwoordt u ver rechts op de schaal.'+
-    '<br>Als u het gevoel heeft dat &quot;spruitjes&quot; vrij onaangenaam is voor u, dan antwoord u een beetje links op de schaal.'+
-    '<br>Als u het gevoel heeft dat &quot;ontspannen&quot; een vrij positieve betekenis voor u heeft, dan antwoord u een beetje rechts op de schaal.'+
+    '<br>Als u het gevoel heeft dat &quot;spruitjes&quot; vrij onaangenaam is voor u, dan antwoordt u een beetje links op de schaal.'+
+    '<br>Als u het gevoel heeft dat &quot;ontspannen&quot; een vrij positieve betekenis voor u heeft, dan antwoordt u een beetje rechts op de schaal.'+
     '<br><br> <img src = https://ghepmk01.ugent.be/limesurvey2/upload/surveys/987313/files/Valentie.PNG>',
     '<b> Activiteit / opwinding </b> is een maatstaaf voor opwinding versus kalmte.'+
     '<br><br>Een afbeelding is ACTIEF als je je hierdoor gestimuleerd, opgewonden, zenuwachtig of klaarwakker voelt. Een afbeelding is PASSIEF als u zich er ontspannen, kalm, traag, saai of slaperig van voelt.'+
     '<br>Geef aan hoe opwindend u elke afbeelding vindt op een schaal van ZEER PASSIEF tot ZEER ACTIEF, waarbij het middelpunt een matige opwinding vertegenwoordigt. ',
     '<b> Voorbeelden:</b><br><br>'+
-    'Als u bijvoorbeeld vindt dat &quot;hangmat&quot; een vrij passieve betekenis heeft, dan kiest u vrij ver links op de schaal.'+
-    '<br>Als u vindt dat &quot;werken&quot; een vrij actieve betekenis heeft, dan kiest u vrij ver rechts op de schaal.'+
-    '<br>Als u vindt dat &quot;mediteren&quot; een zeer kalme betekenis heeft, dan kiest u ver links op de schaal.'+
-    '<br>Als u vindt dat &quot;explosief&quot; een zeer opwindende betekenis heeft, dan kiest u ver rechts op de schaal.<br><br> <img src = https://ghepmk01.ugent.be/limesurvey2/upload/surveys/987313/files/Opwinding.PNG>',
+    'Als u bijvoorbeeld vindt dat &quot;hangmat&quot; een vrij passieve betekenis heeft, dan antwoordt u vrij ver links op de schaal.'+
+    '<br>Als u vindt dat &quot;werken&quot; een vrij actieve betekenis heeft, dan antwoordt u vrij ver rechts op de schaal.'+
+    '<br>Als u vindt dat &quot;mediteren&quot; een zeer kalme betekenis heeft, dan antwoordt u ver links op de schaal.'+
+    '<br>Als u vindt dat &quot;explosief&quot; een zeer opwindende betekenis heeft, dan antwoordt u ver rechts op de schaal.<br><br> <img src = https://ghepmk01.ugent.be/limesurvey2/upload/surveys/987313/files/Opwinding.PNG>',
   ],
   show_clickable_nav: true,
   allow_keys: false,
