--- a/stopCamera.html
+++ b/stopCamera.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-  <p>U heeft zojuist het volledige experiment doorlopen! Druk hieronder op 'Stop' om de video opname te starten. Hierna zult u de voortgang van het opslaan zien. </p>
+  <p>U heeft zojuist het volledige experiment doorlopen! Druk hieronder op 'Stop' om de video opname te stoppen. Hierna zult u de voortgang van het opslaan zien. </p>
   <p> Wanneer de voortgang op 100% staat is de video succesvol opgeslagen en kunt u op volgende drukken. Op de volgende pagina zal de data van de rest van de taak opgeslagen worden! </p>
 
   <div><button id="stop" onclick="onBtnStopClicked()">Stop</button>
